--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                             Inicio </a>
                             <div class="dropdown-menu" aria-labelledby="homeMenu">
                                 <a class="dropdown-item" href="#Pilares">Pilares</a>
-                                <a class="dropdown-item" href="#features3">Servicios</a>
                                 <a class="dropdown-item" href="#Industria">Industria</a>
                                 <a class="dropdown-item" href="#Tech">Tecnología</a>
                                 <a class="dropdown-item" href="#clientes">Clientes</a>
@@ -80,12 +79,6 @@
                             <div class="dropdown-menu" aria-labelledby="productMenu">
                                 <a class="dropdown-item" href="#features3">Apertura Remota</a>
                                 <a class="dropdown-item" href="#features4">Consentimiento Expreso</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pageMenu" data-toggle="dropdown">Blog </a>
-                            <div class="dropdown-menu" aria-labelledby="pageMenu">
-                                <a class="dropdown-item" href="#contact">Blog</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -355,10 +348,10 @@ window.onclick = function(event) {
                                 <div class="feature--new">
                                     <div class="feature--icon">
                                         <i class="flaticon-life-insurance icons"></i>
-                                        <h9 class="new_class">Recursos Humanos</h9>
                                     </div>
                                     <div class="feature--content">
-</div>
+                                        <h9 class="new_class">Recursos Humanos</h9>
+                                    </div>
                                 </div>
                             </div>
                             <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 wow" data-wow-duration="1s">
@@ -450,72 +443,6 @@ BLOCKCHAIN</h5>
         </div>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k6 w-75"></lottie-player>
         <div id="portfolio" class="space" style="height: 100px"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title text-center">
-                        <span>Aprende más sobre tecnología</span>
-                        <h1>En nuestro Blog:</h1>
-                        <img src="images/dot-bluecolor.png" alt="img">
-                    </div>
-                    <div class="space" style="height: 40px"></div>
-                </div>
-                <div class="col-sm-12">
-                    <div class="portfolio-filter">
-                        <ul class="list-inline">
-                            <li class="select-cat list-inline-item" data-filter="*">DICIO</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="isotope_items">
-                    <!-- Item -->
-                    <div data-tilt class="single_item portfolio-big-img miguel">
-                        <img class="img-fluid" src="images/p-1.png" alt="Img">
-                        <div class="single_item_content">
-                            <a href="images/p-1.png"><i class="fa fa-fw fa-eye"></i></a>
-                            <span>La importancia</span>
-                            <h6>de la biométria facial</h6>
-                        </div>
-                    </div>
-                    <!-- Item -->
-                    <div data-tilt class="single_item portfolio-small-img ricardo">
-                        <img class="img-fluid" src="images/p-2.png" alt="Img">
-                        <div class="single_item_content">
-                            <a href="images/p-2.png"><i class="fa fa-fw fa-eye"></i></a>
-                            <span>Biométria</span>
-                            <h6>El presente</h6>
-                        </div>
-                    </div>
-                    <!-- Item -->
-                    <div data-tilt class="single_item portfolio-small-img ricardo">
-                        <img class="img-fluid" src="images/p-3.png" alt="Img">
-                        <div class="single_item_content">
-                            <a href="images/p-3.png"><i class="fa fa-fw fa-eye"></i></a>
-                            <span>Donde aplicar</span>
-                            <h6>Biometría Facial</h6>
-                        </div>
-                    </div>
-                    <!-- Item -->
-                    <div data-tilt class="single_item portfolio-small-img adrian">
-                        <img class="img-fluid" src="images/p-4.png" alt="Img">
-                        <div class="single_item_content">
-                            <a href="images/p-4.png"><i class="fa fa-fw fa-eye"></i></a>
-                            <span>Blockchain</span>
-                            <h6>y su ayuda al sector financiero</h6>
-                        </div>
-                    </div>
-                    <!-- Item -->
-                    <div data-tilt class="single_item portfolio-small-img adrian">
-                        <img class="img-fluid" src="images/p-5.png" alt="Img">
-                        <div class="single_item_content">
-                            <a href="images/p-5.png"><i class="fa fa-fw fa-eye"></i></a>
-                            <span>Etherum</span>
-                            <h6>Y el blockchain</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div id="clientes" class="space" style="height: 100px"></div>
         <section class="gradient-bg">
             <div class="space" style="height: 60px"></div>
@@ -694,10 +621,10 @@ de tu empresa.</h1>
             <div class="diciofoot">
                 <div class="footer">
                     <li class="footer2">
-                        <a href="#feature2">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li class="footer2">
-                        <a href="#feature2">Productos</a>
+                        <a href="#features3">Productos</a>
                     </li>
                     <li class="footer2">
                         <a href="Notice.html" target="_blank">Aviso de privacidad</a>
