--- a/_pgbackup/Notice_1625672170.html
+++ b/_pgbackup/Notice_1625672170.html
@@ -3,18 +3,28 @@
     <head class="Back jfgij">
         <!-- Document Meta============================================= -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/slick.css">
-        <link rel="stylesheet" href="css/slick-theme.css">
-        <link rel="stylesheet" href="css/flaticon.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!--IE Compatibility Meta-->
+        <meta name="author" content="zytheme"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="description" content="Simplificando las interacciones de la sociedad">
+        <link href="assets/images/favicon/favicon.ico" rel="icon">
+        <!-- Fonts
+    ============================================= -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish:600,700,800,900,200italic,300italic,400italic,600italic,700italic,900italic,800italic,200,300,400,500,500italic&display=swap">
+        <!-- Stylesheets
+    ============================================= -->
+        <link href="assets/css/external.css" rel="stylesheet">
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/bootstrap-select.min.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
-        <link rel="stylesheet" href="css/magnific-popup.css">
-        <link rel="stylesheet" href="css/colors/gradient/color.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link href="css/external.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/jquery.fullPage.css">
+        <link rel="stylesheet" href="css/morris.css">
+        <link rel="stylesheet" href="css/jquery.jqplot.css">
         <link rel="stylesheet" href="css/owl.carousel.css">
         <link rel="stylesheet" href="css/revolution/settings.css">
         <link rel="stylesheet" href="css/datepicker.css">
@@ -23,12 +33,6 @@
         <link rel="stylesheet" href="js/vendors/owl-carousel/owl.theme.css">
         <link rel="stylesheet" href="js/vendors/owl-carousel/owl.carousel.css">
         <link rel="stylesheet" href="js/vendors/owl-carousel/owl.transitions.css">
-        <link rel="stylesheet" href="css/morris.css">
-        <link rel="stylesheet" href="css/jquery.jqplot.css">
-        <title>DICIO - Tan Único Como Tú</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish&display=swap">
-    </head>
-    <body>
         <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"/> -->
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -53,7 +57,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="logo" href="index.html">   </a>
+                            <a class="logo" href="index.html"> <img class="head_menu_logo head_menu_logo_2 logo-dark" src="assets/images/PNG/1.png" alt="appy Logo" width="150"> <img class="logo-light" alt="appy Logo" src="assets/images/PNG/1.png" width="90" style="margin-left: 43px; width: 142px;"> </a>
                         </div>
                         <div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
                             <ul class="nav navbar-nav nav-pos-right navbar-left nav-split">
@@ -71,7 +75,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12">
                                 <div class="slide--logo mt-100 hidden-xs wow fadeInUp" data-wow-duration="1s">
                                     <div class="row">
-                                        <img src="images/logo.png" alt="logo hero" class="logo_head logo_head_new" width="150">
+                                        <img src="assets/images/PNG/1.png" alt="logo hero" class="logo_head logo_head_new" width="150">
                                     </div>
                                 </div>
                             </div>
@@ -136,105 +140,6 @@
                 </div>
                 <!-- .container end -->
             </section>
-            <div id="backtotop">
-                <i class="fa fa-2x fa-long-arrow-up"></i>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="wow fadeInLeft" data-wow-duration="2.5s">
-                        <div class="section-title">
-                            <span>Agenda un tour de nuestro producto de la mano de nuestros expertos.</span>
-                            <h1>Las soluciones de <span>DICIO</span> están listas para ser integradas al flujo de trabajo
-de tu empresa.</h1>
-                            <img src="images/dot-bluecolor.png" alt="img">
-                        </div>
-                        <div class="space" style="height: 50px"></div>
-                        <div class="row contact-form">
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" placeholder="Nombre">
-                            </div>
-                            <div class="col-md-6">
-                                <input type="email" class="form-control" placeholder="E-mail">
-                            </div>
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" placeholder="Télefono">
-                            </div>
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" placeholder="Empresa">
-                            </div>
-                            <div class="col-md-12">
-                                <textarea class="form-control" rows="3"></textarea>
-                                <div class="thegncy-btn">
-                                    <input class="contact-btn" type="submit" value="Enviar ahora">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="space" style="height: 50px;"></div>
-            <footer class="site-footer" style="background-color: #1c7ff4; height: 100%;">
-                <section class="anim">
-                    <div class="wave wave1"></div>
-                    <div class="wave wave2"></div>
-                    <div class="wave wave3"></div>
-                    <div class="wave wave4"></div>
-                </section>
-                <div class="diciofoot">
-                    <div class="footer">
-                        <li class="footer2">
-                            <a href="index.html">Inicio</a>
-                        </li>
-                        <li class="footer2">
-                            <a href="#features3">Productos</a>
-                        </li>
-                        <li class="footer2">
-                            <a href="Notice.html" target="_blank">Aviso de privacidad</a>
-                        </li>
-                        <li class="footer2">
-                            <a href="#cta">Contacto</a>
-                        </li>
-                    </div>
-                </div>
-                <div class="logofoot">
-                    <img src="images/logo-alt.svg" alt="logo" width="300" class="imgfo">
-                </div>
-                <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                <column class="Foot">
-                    <div class="dicio ¡">
-                        <div class="¡">
-                            <div>
-                                <div class="redes">
-                                    <div class="redes_icon">
-                                        <a href="https://www.linkedin.com/company/34744323/admin/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                                    </div>
-                                    <div class="redes_icon">
-                                        <a href="https://twitter.com/Dicio_AI" target="_blank"><i class="fa fa-twitter"></i></a>
-                                    </div>
-                                    <div class="redes_icon">
-                                        <a href="https://www.facebook.com/Dicioai" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                                    </div>
-                                    <div class="redes_icon">
-                                        <a href="https://www.instagram.com/dicio.ai/" target="_blank"><i class="fa fa-instagram"></i></a>
-                                    </div>
-                                    <div class="redes_icon">
-                                        <a href="https://www.youtube.com/channel/UCJ_8A6YXEs2XxAj3cL9-DEg" target="_blank"><i class="fa fa-youtube"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </column>
-                <column class="Foot">
-                    <div class=" dicio2">
-                        <p class="textfoot">info@dicio.ai</p>
-                        <p class="textfoot">Piso 2, iOS Offices, Miyanna Av. Ejército Nacional 769 Granada, Miguel Hidalgo 11520, CDMX</p>
-                    </div>
-                </column>
-                <div class="footer-copyright">
-                    <p>Copyright &copy; DICIO 2021. All Right Reserved</p>
-                </div>
-            </footer>
             <!-- #feature3 end -->
             <!-- Video
 		============================================= -->
@@ -246,6 +151,46 @@ de tu empresa.</h1>
         ============================================= -->
             <!-- **************** MEET OUR TEAM ***************** -->
             <!-- **************** MEET OUR TEAM END ***************** -->
+            <section id="cta" class="contact_form cta pb-0 section text-center">
+                <div class="cont_form cont_form_2 container" style="display: block;">
+                    <div class="row clearfix">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
+                            <div class="heading heading-1 mb-50 text--center wow fadeInUp" data-wow- duration="1s">
+                                <h2 class="heading--title newhead">CONTACTO</h2>
+                            </div>
+                        </div>
+                        <!-- .col-md-6 end -->
+                    </div>
+                    <!-- .row end -->
+                    <div class="row" style="padding-right: 0px; padding-bottom: 0px; width: 64%; display: inline-flex; margin-left: 0px; margin-right: 0px;">
+                        <div class="col-lg-8 offset-md-2 mb-sm-30" style="width: 102%;">
+                            <form name="contactForm" id="contact_form" class="FORM form-border" method="post" action="email.php">
+                                <div class="field-set">
+                                    <input type="text" name="name" id="name" class="form-control" placeholder="Nombre"/>
+                                </div>
+                                <div class="field-set">
+                                    <input type="text" name="email" id="email" class="form-control" placeholder="Email"/>
+                                </div>
+                                <div class="field-set">
+                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Teléfono"/>
+                                </div>
+                                <div class="field-set">
+                                    <textarea name="message" id="message" class="form-control" placeholder="Mensaje"></textarea>
+                                </div>
+                                <div class="spacer-half"></div>
+                                <div id="submit">
+                                    <input type="submit" id="send_message" value="Enviar" class="btn 							btn-custom"/>
+                                </div>
+                                <div id="mail_success" class="success">Your message has been sent 								successfully.</div>
+                                <div id="mail_fail" class="error">Sorry, error occured this time 							sending your message.</div>
+                            </form>
+                        </div>
+                        <!-- .col-md-12 end -->
+                    </div>
+                    <!-- .row end -->
+                </div>
+                <!-- .container end -->
+            </section>
         </div>
         <!-- #cta1 end -->
         <!-- Newsletter #1
@@ -254,6 +199,72 @@ de tu empresa.</h1>
         <!-- #newsletter end -->
         <!-- Footer #5
 		============================================= -->
+        <div id="footer" class="footer footer-5 newwwww">
+            <div class="container footer_xs">
+                <div class="footer_xs row">
+                    <div class="col-sm-auto col-xs-6">
+                        <div class="address-holder">
+                            <div class="phone">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15049.515499152316!2d-99.1997201!3d19.4392251!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5a412a4a364f8c5!2sIOS%20OFFICES%20Miyana!5e0!3m2!1ses-419!2smx!4v1609957179203!5m2!1ses-419!2smx" width="300" height="100" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            </div>
+                            <div class="email">
+                                <i class="lnr lnr-envelope new_logito"></i> info@dicio.ai 
+                                <br> dicio.ai/dicio.com
+                            </div>
+                            <div class="address">
+                                <i class="lnr lnr-map-marker new_logito"></i>
+                                <div>Piso 2, iOS Offices, Miyanna
+                                    <br>
+                                    Av. Ejército Nacional 769
+                                    <br>
+                                    Granada, Miguel Hidalgo 11520, CDMX
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <div class="footer-menu-holder">
+                            <h4>DICIO</h4>
+                            <ul class="footer-menu">
+                                <li>
+                                    <a href="index.html">Acerca de DICIO</a>
+                                </li>
+                                <li>
+                                    <a href="accordion.html">Aviso de privacidad</a>
+                                </li>
+                                <li>
+                                    <a href="#cta">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-3">
+                        <div class="footer-menu-holder">
+                            <h4>Redes Sociales</h4>
+                            <div class="social-menu-holder">
+                                <ul class="social-menu">
+                                    <li>
+                                        <a href="https://www.facebook.com/Dicioai" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.instagram.com/dicio.ai/" target="_blank"><i class="fa fa-instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://twitter.com/Dicio_AI" target="_blank"><i class="fa fa-twitter"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com/channel/UCJ_8A6YXEs2XxAj3cL9-DEg" target="_blank"><i class="fa fa-youtube"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/company/34744323/admin/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- #wrapper end -->
         <!-- Footer Scripts
 
