--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 </div>
             </div>
         </nav>
-        <section id="banner" class="banner banner12 bannw">
+        <section id="banner" class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 wow fadeInLeft" data-wow-duration="2.5s">
+                    <div class="col-md-8 fadeInLeft wow wowhead wowxs" data-wow-duration="2.5s">
                         <div class="bnr-social">
-                            <ul class="list-inline">
+                            <ul class="list-inline but ">
                                 <li class="list-inline-item">
                                     <a target="_blank" href="https://www.linkedin.com/company/dicio-ai/mycompany/?viewAsMember=true"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
@@ -114,7 +114,7 @@
                         <h1>Simplificamos las interacciones de la sociedad</h1>
                         <p><p>Desarrollamos soluciones de identificación digital totalmente seguras, además te ofrecemos las mejores soluciones basadas en Biometría, Inteligencia Artificial y Blockchain.</p></p>
                         <div class="bnr-btn">
-                            <ul class="list-inline">
+                            <ul class="but list-inline">
                                 <li class="list-inline-item">
                                     <a href="#contact">Contáctanos</a>
                                 </li>
@@ -192,8 +192,8 @@ window.onclick = function(event) {
             </div>
         </section>
         <div class="space1"></div>
-        <div class="class2 container">
-            <div class="row justify-content-center" style="z-index: -7;">
+        <div class="class2 class3 container">
+            <div class="row justify-content-center">
                 <div class="col-md-12" style="z-index: -8;">
                     <div class="section-title text-center">
                         <h1 style="color: #0883f5;">Utiliza DICIO para agilizar procesos dentro de tu organización.</h1>
@@ -240,7 +240,7 @@ window.onclick = function(event) {
         <div class="cont12 container">
             <div class="pilares row">
                 <div class="col-lg-6 col-sm-12 text-center wow fadeInLeft" data-wow-duration="2.5s">
-                    <img class="img-fluid img-shadow" data-tilt src="images/img-3.svg" alt="img" style="width: 100%; border-radius: 70px;">
+                    <img class="img-fluid img-shadow imgpil imgpilg" data-tilt src="images/img-3.svg" alt="img">
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 col-sm-12 wow fadeInRight" data-wow-duration="2.5s">
                     <div class="space d-none d-xl-block d-sm-block" style="height: 60px"></div>
@@ -249,7 +249,7 @@ window.onclick = function(event) {
                         <h4 style="color: #0883f5; font-size: 30px;">Acerca de nosotros</h4>
                         <h1>Pilares</h1>
                     </div>
-                    <p>Desarrollamos herramientas seguras, inteligentes y altamente competitivas para facilitar las interacciones digitales de nuestros clientes.</p>
+                    <p style="text-align: justify;">Desarrollamos herramientas seguras, inteligentes y altamente competitivas para facilitar las interacciones digitales de nuestros clientes.</p>
                     <ul>
                         <li>Más clientes con vinculación no presencial, fuera del horario de sucursal (Multicanal).</li>
                         <li>Optimiza tiempos de respuesta, mayor disponibilidad.</li>
@@ -257,56 +257,56 @@ window.onclick = function(event) {
                         <li>Realizamos validaciones con verificación institucional.</li>
                     </ul>
                     <div class="space" style="height: 30px"></div>
-                    <div class="thegncy-btn">
+                    <div class="btmagncysm thegncy-btn">
                         <a href="#contact">Contáctanos</a>
                     </div>
                 </div>
             </div>
         </div>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k w-75"></lottie-player>
-        <div id="features3" class="space" style="height: 196px; margin-top: 0;"></div>
+        <div id="features3" class="space" style="height: 58px; margin-top: 0;"></div>
         <div class="container">
             <div class="row">
                 <div data-tilt class="hello3 fadeInLeft spacecon wow">
-                    <iframe class="hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="classchiq hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
                     <div class="section-title">
                         <img src="images/web/SVG/SVG/logo3.svg" alt="logo" width="153">
-                        <h1><img src="images/web/SVG/SVG/Recurso%20203.svg" alt="logo" width="500"></h1>
+                        <h1><img src="images/web/SVG/SVG/Recurso%20203.svg" alt="logo" width="370"></h1>
                     </div>
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <p style="text-align: justify;">De la opción a sus clientes de abrir una cuenta bancaria de forma fácil, sencilla y sin la necesidad de acudir a una sucursal.</p>
+                            <p style="text-align: justify;">Da la opción a tus clientes de abrir una cuenta bancaria de forma fácil, sencilla y sin la necesidad de acudir a una sucursal.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="features4" class="space4" style="height: 20px; margin-top: 0;"></div>
+        <div id="features4" class="space4"></div>
         <div id="features" class="container">
             <div class="row">
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
                     <div class="section-title">
                         <img src="images/web/SVG/SVG/logo2.svg" alt="logo" width="153">
-                        <h1><img src="images/web/SVG/SVG/Recurso%20202.svg" alt="logo" width="500"></h1>
+                        <h1><img src="images/web/SVG/SVG/Recurso%20202.svg" alt="logo" width="370"></h1>
                     </div>
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso acreditada por la Secretaría de Economía y cumplimiento de la NOM 151.</p>
+                            <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa. Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso acreditada por la Secretaría de Economía y cumplimiento de la NOM 151.</p>
                         </div>
                     </div>
                 </div>
-                <div data-tilt class="hello fadeInRight spacecon wow">
-                    <iframe class="hello123 hello2 hello92 img-fluid" src="https://www.youtube.com/embed/XQ7v3He994c?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <img class="img-fluid img-shadow2 img-shadow3 img-shadow32" src="images/img-4.png" alt="img">
+                <div data-tilt class="hello3 fadeInLeft spacecon wow">
+                    <iframe class="classchiq hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
             </div>
         </div>
-        <div id="Industria" class="space" style="height: 92px;"></div>
+        <div id="Industria" class="space" style="height: 122px;"></div>
         <section class="gradient-bg">
             <div class="space" style="height: 60px"></div>
             <div class="container">
@@ -320,7 +320,7 @@ window.onclick = function(event) {
                     </div>
                     <div class="col-lg-8 col-sm-12">
                         <div class="testimonials">
-                            <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 wow" data-wow-duration="1s">
+                            <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 slidemovil wow" data-wow-duration="1s">
                                 <div class="feature--new">
                                     <div class="feature--icon">
                                         <i class="flaticon-save-money icons"></i>
@@ -342,7 +342,7 @@ window.onclick = function(event) {
                                         <i class="flaticon-hospital icons"></i>
                                     </div>
                                     <div class="feature--content">
-                                        <h9 class="new_class">Servicios Medicos</h9>
+                                        <h9 class="new_class">Servicios Médicos</h9>
                                     </div>
                                 </div>
                                 <div class="feature--new">
@@ -444,10 +444,10 @@ BLOCKCHAIN</h5>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k6 w-75"></lottie-player>
         <div id="portfolio" class="space" style="height: 100px"></div>
         <div id="clientes" class="space" style="height: 100px"></div>
+        <div class="divspace divspacesm space"></div>
         <section class="gradient-bg">
-            <div class="space" style="height: 60px"></div>
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="casos justify-content-center row">
                     <div class="col-md-12">
                         <div class="section-title text-center white">
                             <span>Casos de Éxito</span>
@@ -460,7 +460,7 @@ BLOCKCHAIN</h5>
                         <div class="testimonials">
                             <div class="testimonial-item">
                                 <p>Se implementó un proceso para sustituir la firma en papel por un proceso 100% digital, que favorece el almacenamiento y gestión de medios físicos. Garantizando validez legal.</p>
-                                <h4>SOCIEDAD DE INFROMACIÓN CREDITICIA</h4>
+                                <h4>SOCIEDAD DE INFORMACIÓN CREDITICIA</h4>
                             </div>
                             <div class="testimonial-item">
                                 <p>Agregó a su proceso existente mecanismos que le permiten mitigar el uso de credenciales apócrifas, además de poder conocer la vigencia de la credencial para votar INE.</p>
