--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
                 <div class=" bnr-shape-img-2 phone">
                     <img src="images/bnr-shape-2.png" alt="logo" width="810" class="img1200 imghero">
                     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_mlf754me.json" background="transparent" speed="1" loop autoplay class="blob1 blob1200"></lottie-player>
+                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_mlf754me.json" background="transparent" speed="1" loop autoplay class="blob1 blob1200 hideblobsm"></lottie-player>
                 </div>
             </div>
         </section>
@@ -235,7 +235,7 @@ window.onclick = function(event) {
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2 blob4k2"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2 blob4k2 hideblobsm"></lottie-player>
         <div id="Pilares" class="spce2"></div>
         <div class="cont12 container">
             <div class="pilares row">
@@ -263,7 +263,7 @@ window.onclick = function(event) {
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k w-75"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k hideblobsm w-75"></lottie-player>
         <div id="features3" class="space" style="height: 58px; margin-top: 0;"></div>
         <div class="container">
             <div class="row">
@@ -441,7 +441,7 @@ BLOCKCHAIN</h5>
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k6 w-75"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k6 w-75 hideblobsm"></lottie-player>
         <div id="portfolio" class="space" style="height: 100px"></div>
         <div id="clientes" class="space" style="height: 100px"></div>
         <div class="divspace divspacesm space"></div>
@@ -618,18 +618,18 @@ de tu empresa.</h1>
                 <div class="wave wave3"></div>
                 <div class="wave wave4"></div>
             </section>
-            <div class="diciofoot">
+            <div class="diciofoot diciofootsm">
                 <div class="footer">
-                    <li class="footer2">
+                    <li class="footer2 footersm">
                         <a href="index.html">Inicio</a>
                     </li>
-                    <li class="footer2">
+                    <li class="footer2 footersm ">
                         <a href="#features3">Productos</a>
                     </li>
-                    <li class="footer2">
+                    <li class="footer2 footersm ">
                         <a href="Notice.html" target="_blank">Aviso de privacidad</a>
                     </li>
-                    <li class="footer2">
+                    <li class="footer2 footersm ">
                         <a href="#cta">Contacto</a>
                     </li>
                 </div>
