--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ window.onclick = function(event) {
                 <div class="col-md-12" style="z-index: -8;">
                     <div class="section-title text-center">
                         <h1 style="color: #0883f5;">Utiliza DICIO para agilizar procesos dentro de tu organización.</h1>
-                        <h4><h2 style="margin-left: 34px; margin-right: 34px;">Desarrollamos soluciones que garantizan procesos de identificación digital de una manera fácil y segura.&nbsp;</h2></h4>
+                        <h4><h2 class="h2">Desarrollamos soluciones que garantizan procesos de identificación digital de una manera fácil y segura.&nbsp;</h2></h4>
                     </div>
                     <div class="space" style="height: 40px"></div>
                 </div>
@@ -244,7 +244,7 @@ window.onclick = function(event) {
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 col-sm-12 wow fadeInRight" data-wow-duration="2.5s">
                     <div class="space d-none d-xl-block d-sm-block" style="height: 60px"></div>
-                    <div class="space d-block d-sm-none" style="height: 60px"></div>
+                    <div class="d-block d-sm-none space spacesm" style="height: 60px"></div>
                     <div class="section-title">
                         <h4 style="color: #0883f5; font-size: 30px;">Acerca de nosotros</h4>
                         <h1>Pilares</h1>
@@ -274,7 +274,7 @@ window.onclick = function(event) {
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
                     <div class="section-title">
                         <img src="images/web/SVG/SVG/logo3.svg" alt="logo" width="153">
-                        <h1><img src="images/web/SVG/SVG/Recurso%20203.svg" alt="logo" width="370"></h1>
+                        <h1><img src="images/web/SVG/SVG/Recurso%20203.svg" alt="logo" width="370" class="imgsvg"></h1>
                     </div>
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
@@ -291,7 +291,7 @@ window.onclick = function(event) {
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
                     <div class="section-title">
                         <img src="images/web/SVG/SVG/logo2.svg" alt="logo" width="153">
-                        <h1><img src="images/web/SVG/SVG/Recurso%20202.svg" alt="logo" width="370"></h1>
+                        <h1><img src="images/web/SVG/SVG/Recurso%20202.svg" alt="logo" width="370" class="imgsvg"></h1>
                     </div>
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
@@ -313,7 +313,7 @@ window.onclick = function(event) {
                 <div class="row justify-content-center">
                     <div class="col-md-12">
                         <div class="section-title text-center white">
-                            <h1 style="margin-left: 50px; margin-right: 50px;">Nuestra plataforma ofrece soluciones específicas para empresas de distintos rubros</h1>
+                            <h1>Nuestra plataforma ofrece soluciones específicas para empresas de distintos rubros</h1>
                             <img src="images/dot-white.png" alt="img">
                         </div>
                         <div class="space" style="height: 35px"></div>
@@ -321,7 +321,7 @@ window.onclick = function(event) {
                     <div class="col-lg-8 col-sm-12">
                         <div class="testimonials">
                             <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 slidemovil wow" data-wow-duration="1s">
-                                <div class="feature--new">
+                                <div class="feat feature--new">
                                     <div class="feature--icon">
                                         <i class="flaticon-save-money icons"></i>
                                     </div>
@@ -401,8 +401,8 @@ window.onclick = function(event) {
                 <div class="col-lg-5 wow fadeInLeft" data-wow-duration="2.5s">
                     <div class="section-title">
                         <span>DICIO</span>
-                        <h1>Tecnología que facilita las <span>interacciones</span> entre empresa y personas.</h1>
-                        <p style="text-align: justify;">Nuestros procesos cumplen con el artículo 51 de la Circular Única Bancaria y
+                        <h1 class="h1sm">Tecnología que facilita las <span>interacciones</span> entre empresa y personas.</h1>
+                        <p class="texti textism">Nuestros procesos cumplen con el artículo 51 de la Circular Única Bancaria y
 la Norma Oficial Mexicana 151.</p>
                         <img src="images/dot-bluecolor.png" alt="img">
                     </div>
@@ -413,7 +413,7 @@ la Norma Oficial Mexicana 151.</p>
                         </div>
                         <div class="feature-item-content">
                             <h5>CRYPTO FACE KEY</h5>
-                            <p class="texti">Genera un biométrico facial y un score de vida de los individuos procesando esta información de manera segura.</p>
+                            <p class="texti textism">Genera un biométrico facial y un score de vida de los individuos procesando esta información de manera segura.</p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3s">
@@ -423,7 +423,7 @@ la Norma Oficial Mexicana 151.</p>
                         <div class="feature-item-content">
                             <h5>VALIDACIÓN EN
 BLOCKCHAIN</h5>
-                            <p class="texti">Esta tecnología permite hacer una auditoría, logrando tener una trazabilidad en tiempo y forma de las operaciones. Así mismo teniendo un seguimiento de la transacción de principio a fin. </p>
+                            <p class="texti textism">Esta tecnología permite hacer una auditoría, logrando tener una trazabilidad en tiempo y forma de las operaciones. Así mismo teniendo un seguimiento de la transacción de principio a fin. </p>
                         </div>
                     </div>
                     <div class="feature-item wow bounceInUp" data-wow-duration="3.5s">
@@ -432,7 +432,7 @@ BLOCKCHAIN</h5>
                         </div>
                         <div class="feature-item-content">
                             <h5>HOLOGRAMA</h5>
-                            <p class="texti">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales. Utilizando nuestro modelo de Inteligencia artificial.</p>
+                            <p class="texti textism">Genera una mayor certeza a la evidencia presentada por parte de los usuarios, al validar que existan los mecanismos holográficos de seguridad en sus documentos oficiales. Utilizando nuestro modelo de Inteligencia artificial.</p>
                         </div>
                     </div>
                 </div>
