--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <h1>Simplificamos las interacciones de la sociedad</h1>
                         <p><p>Desarrollamos soluciones de identificación digital totalmente seguras, además te ofrecemos las mejores soluciones basadas en Biometría, Inteligencia Artificial y Blockchain.</p></p>
                         <div class="bnr-btn">
-                            <ul class="but list-inline">
+                            <ul class="but list-inline ">
                                 <li class="list-inline-item">
                                     <a href="#contact">Contáctanos</a>
                                 </li>
@@ -320,7 +320,7 @@ window.onclick = function(event) {
                     </div>
                     <div class="col-lg-8 col-sm-12">
                         <div class="testimonials">
-                            <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel new_style_text_3 new_style_text_4 slidemovil wow" data-wow-duration="1s">
+                            <div class="CLASS_BLUE New_CLAS fadeInUp feature-panel iconssm new_style_text_3 new_style_text_4 slidemovil wow" data-wow-duration="1s">
                                 <div class="feat feature--new">
                                     <div class="feature--icon">
                                         <i class="flaticon-save-money icons"></i>
@@ -345,7 +345,7 @@ window.onclick = function(event) {
                                         <h9 class="new_class">Servicios Médicos</h9>
                                     </div>
                                 </div>
-                                <div class="feature--new">
+                                <div class="feature--new featuresm">
                                     <div class="feature--icon">
                                         <i class="flaticon-life-insurance icons"></i>
                                     </div>
